tests/tests/roundtrip/invalid/semantic/typecheck/int_as_constraint/tree-sitter.generated-error.txt
tests/roundtrip/invalid/semantic/typecheck/int_as_constraint/int_as_constraint.essence:3:11:
  |
3 | such that x
  |           ^
Type error: x
	Expected: bool
	Got: int

tests/roundtrip/invalid/semantic/typecheck/int_as_constraint/int_as_constraint.essence:4:11:
  |
4 | such that y
  |           ^
Type error: y
	Expected: bool
	Got: int